Create JRE from core.jar module